--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html>
+  <html lang="en">
+    <head>
+      <title>Title of the document</title>
+    </head>
 
+     <body>
+        The content of the document......
+    </body>
+
+</html>
