--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
   <html lang="en">
     <head>
-      <link rel=>
+      <link rel="stylesheet" type="text/css" href="theme.css">
       <title>Title of the document</title>
     </head>
 
